fixed #756, logo stayed black after clicking when on mobile

--- a/ui2022/src/app/util/common-components/icons/logo-icon/logo-icon.component.scss
+++ b/ui2022/src/app/util/common-components/icons/logo-icon/logo-icon.component.scss
@@ -3,9 +3,17 @@
     fill: var(--green);
   }
 }
-.svg-icon:hover {
+.svg-icon:active {
   cursor: pointer;
   path {
     fill: var(--black);
+  }
+}
+@media only screen and (min-width: 768px) {
+  .svg-icon:hover {
+    cursor: pointer;
+    path {
+      fill: var(--black);
+    }
   }
 }
